2005-09-02  Michael Snyder  <msnyder@redhat.com>
            Kevin Buettner  <kevinb@redhat.com>

	* mn10300-linux-tdep.c: New file.
	* Makefile.in (mn10300-linux-tdep.o): New Makefile target.
	* config/mn10300/linux.mt (TDEPFILES): Add mn10300-linux-tdep.o and
	corelow.o.
	* mn10300-tdep.h (E_E8_REGNUM, E_E9_REGNUM, E_E10_REGNUM)
	(E_FPCR_REGNUM, E_FS0_REGNUM): New constants.

2005-09-02  Mark Kettenis  <kettenis@gnu.org>

	* infcall.c (call_function_by_hand): Remove code handling
	deprecated_push_arguments.  Bail out early if push_dummy_call
	isn't available.
	* gdbarch.sh (deprecated_push_arguments): Delete.  Adjust a few
	comments accordingly.
	* gdbarch.h, gdbarch.c: Regenerate.

2005-09-01  Paul Gilliam  <pgilliam@us.ibm.com>

        * ppc-tdep.h (struct gdbarch_tdep): Better explanation of using
        -1 for nonexistant registers.
        * rs6000-tdep.c (rs6000_register_reggroup_p): Don't assume that
        tdep->ppc_vr0_regnum and tdep->ppc_ev0_regnum are not -1.

2005-09-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	* arm-linux-tdep.c (arm_linux_push_arguments): Delete.
	(arm_linux_init_abi): Don't register it.

2005-08-31  Mark Kettenis  <kettenis@gnu.org>

	* symfile.c (symbol_file_command, set_initial_language)
	(symfile_bfd_open, get_section_index, add_symtab_fns)
	(find_sym_fns): Reformat code and comments.  Tweak comments.

	* m68k-tdep.c (m68k_register_name): Use ARRAY_SIZE.

2005-08-31  Jim Wilson  <wilson@specifix.com>

	* i386fbsd-tdep.c (i386fbsd_sc_reg_offset): Make it non-static.

2005-08-29  Mark Kettenis  <kettenis@gnu.org>

	* environ.c (unset_in_environ): Use strncmp instead of
	DEPRECATED_STREQN.
	* exec.c (exec_file_attach): Remove DEPRECATED_HPUX_TEXT_END.
	* language.c (set_case_command, language_enum): Use strcmp instead
	of DEPRECATED_STREQ.
	* source.c (select_source_symtab): Sprinkle a few consts.  Use
	strcmp instead of DEPRECATED_STREQ.

	* solib-svr4.c (svr4_current_sos, svr4_fetch_objfile_link_map):